[package]
name = "f_log"
version = "0.1.4"
edition = "2024"
authors = ["Fuji"]
description = "Simple fast logger"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["logger", "logging", "utils"]
categories = ["development-tools::debugging", "command-line-utilities"]

[dependencies]
chrono = "0.4.41"
compact_str = { version="0.9.0"}
crossbeam-channel = "0.5.15"
smallvec = "1.15.1"

[features]
default = []
global = []
local = []

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'fat'
debug = false
incremental = false
overflow-checks = false
